refactor(refactor-test-code): assertSoftly 적용 및 테스트 코드 분류
한개의 테스트 코드 메서드에서 여러번의 assert가 일어나는 경우 assertSoftly로 묶었습니다.
@Nested를 활용해서 테스트 코드의 테스트 범주를 더 자세히 분류했습니다.